kubernetes/deployment/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: public-routing
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: fleetman-webapp
              servicePort: 80
